$Id$

2015-12-07  Christian Franke  <franke@computer.org>

	configure.ac: Append 'svn' to list of download tools.

	update-smart-drivedb.in: Use HTTPS download by default.
	Add options '-t TOOL', '-u LOCATION', '--cacert FILE',
	'--capath DIR', '--insecure' and '--dryrun'.
	Add 'svn' as new download tool.
	Ignore differences in SVN Id string (re-added).
	Remove usage of 'which' command.

2015-11-23  Christian Franke  <franke@computer.org>

	atacmds.cpp: parse_attribute_def(): Init buffers before sscanf() call
	(cppcheck-1.71: uninitvar).

	scsiprint.cpp: Fix GLTSD bit set/cleared info messages (ticket #621).

2015-11-22  Christian Franke  <franke@computer.org>

	Makefile.am: Add NEWS file to svnversion.h target.

	os_win32/installer.nsi: Select 64-bit version on 64-bit Windows.
	Fix installation of runcmda.exe.  Update links.

2015-11-15  Christian Franke  <franke@computer.org>

	configure.ac: Check whether MinGW adds an application manifest.

	Makefile.am: Add default manifest for MinGW builds.

	os_win32/default.manifest: New default application manifest.
	Remove external application manifests.

	os_win32/installer.nsi: Use macros from 'LogicLib.nsh' where possible.
	Add missing MessageBox /SD options.
	Remove external application manifests.

2015-11-07  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Micron M500DC/M510DC Enterprise SSDs: Rename, add M510DC
	- SandForce Driven SSDs: Mushkin Chronos 7mm/MX/G2, Enhanced ECO2
	- Innodisk 3MG2-P SSDs
	- SiliconMotion based SSDs: Crucial BX100 (ticket #597)

2015-10-31  Christian Franke  <franke@computer.org>

	atacmds.cpp, atacmds.h, knowndrives.cpp, knowndrives.h:
	Read default SMART attribute settings from drivedb.h (ticket #465).
	Remove hard-coded attribute names and format settings.

	drivedb.h: Uncomment default settings to create the "DEFAULT" entry.
	Add ",HDD" or ",SSD" to HDD/SSD specific settings.

	smartctl.cpp, smartd.cpp: Use new database initialization function.
